editing home component

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <h1 style="color: white;">GITHUB-SEARCH</h1>
  <p style="color: white;" class="text-center">Search for your username or git repos here!</p>
 </div>
-<!-- <img src="https://desktop.github.com/images/desktop-icon.svg" alt="">
+<img src="https://desktop.github.com/images/desktop-icon.svg" alt="">
 <p style="color: white;">Focus on what matters instead of fighting with Git. Whether you're new to Git or a seasoned user, 
-   GitHub Desktop simplifies your development workflow.</p> -->
+   GitHub Desktop simplifies your development workflow.</p>
 
 <form action="" id="form" [formGroup]="rForm">
     <div class="input-group mb-4" style="padding-top: 45px;">
