--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,10 @@
 <div class="mx-4 d-flex justify-content-between align-items-center">
-  <h1 style="color: white;">GITHUB-SEARCH</h1>
+  <h1 class="heading">GITHUB-SEARCH</h1>
  <p style="color: white;" class="text-center">Search for your username or git repos here!</p>
 </div>
-<img src="https://desktop.github.com/images/desktop-icon.svg" alt="">
+<div class="image">
+  <img src="https://desktop.github.com/images/desktop-icon.svg" alt="" >
+</div>
 <p style="color: white;">Focus on what matters instead of fighting with Git. Whether you're new to Git or a seasoned user, 
    GitHub Desktop simplifies your development workflow.</p>
 
