--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="mx-4 d-flex justify-content-between align-items-center">
   <h1 class="heading">GITHUB-SEARCH</h1>
-  <img src="https://desktop.github.com/images/desktop-icon.svg" alt="" >
+  <img src="https://desktop.github.com/images/desktop-icon.svg" alt="" class="image" >
 </div>
 <p class="para">Focus on what matters instead of fighting with Git. Whether you're new to Git or a seasoned user, 
   GitHub Desktop simplifies your development workflow.</p>
@@ -16,8 +16,8 @@
 <div class="wrapper container" style="display: flex;" *ngIf="profile">
 <div style="display: flex;" >
     <div class="profile-container">
-        <div style="height: 12rem; width: 12rem; border-radius: 50%; margin: 1rem;">
-          <img [src]="profile?.avatar_url" alt="">
+        <div>
+          <img [src]="profile?.avatar_url" alt="" style="width: 100px;">
         </div>
            <div class="other-details"> 
             <p>{{profile && profile.name}}</p>
