--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -20,11 +20,11 @@
           <img [src]="profile?.avatar_url" alt="" style="width: 100px;">
         </div>
            <div class="other-details"> 
-            <p>{{profile && profile.name}}</p>
-            <p>{{profile?.login}}</p>
-            <p>{{profile?.bio}}</p>
-            <p>{{profile?.company}}</p>
-            <p>{{profile?.created_at | date : 'short'}}</p>
+            <p>Name : <strong>{{profile?.name}}</strong></p>
+            <p> Username: <strong>{{profile?.login}}</strong></p>
+            <p>Personal Bio: <strong>{{profile?.bio}}</strong></p>
+            <p >Date Joined: <strong>{{profile.created_at|date}}</strong></p>
+            <p>Last Update: <strong>{{profile.updated_at|date}}</strong></p>
            </div>
     </div>
 </div>
