--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -37,17 +37,22 @@
 p {
     color: black;
 }
-.profile-container {
+/* .profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20rem;
+} */
+/* .repos {
+    display: flex;
+    flex-direction: column;
     
-}
-.repos {
-    
-    
-}
+} */
 a {
     color: black;
     text-decoration: none;
-    font-weight: bold;
+    
+    font-style: italic;
 }
 a:hover {
     color: blue;
