--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -23,6 +23,7 @@
 .heading{
     color: white;
     margin-left: 450px; 
+    text-decoration: underline;
 }
 .image{
     margin-right: 350px;
@@ -51,11 +52,12 @@ p {
 a {
     color: black;
     text-decoration: none;
-    
+    font-weight: 500;
     font-style: italic;
 }
 a:hover {
-    color: blue;
+    color: #6327d1;
+    text-decoration: underline;
 }
 input {
     width: 20rem;
@@ -70,9 +72,19 @@ button {
 .wrapper {
     background-color: #fff;
     border-radius: 8px;
+    justify-content: center;
+
 }
 .repos{
+    width: 45rem;
     height: 25rem;
     overflow-y: scroll;
-align-items: flex-end;
+    margin-left: 150px;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.subheading{
+    font-style: oblique;
+    font-family: Orelega One;
+    color: black;
 }
