--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -86,5 +86,5 @@ button {
 .subheading{
     font-style: oblique;
     color: black;
-    text-decoration: underline;
+    text-decoration: dashed;
 }
