styling home component

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -85,6 +85,6 @@ button {
 }
 .subheading{
     font-style: oblique;
+    font-family: Orelega One;
     color: black;
-    text-decoration: dashed;
 }
